force-app/main/default/objects/public_remotecomputestep__x/public_remotecomputestep__x.object-meta.xml
<CustomObject>
    <description>public$remotecomputestep</description>
    <externalDataSource>Remote_Compute_Results</externalDataSource>
    <externalName>public$remotecomputestep</externalName>
    <label>Remote Compute Step</label>
    <pluralLabel>Remote Compute Steps</pluralLabel>
</CustomObject>