force-app/main/default/objects/public_remotecomputestep__x/fields/creationdate__c.field-meta.xml
<CustomField>
    <fullName>creationdate__c</fullName>
    <description>creationdate</description>
    <externalDeveloperName>creationdate</externalDeveloperName>
    <label>creationdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>