force-app/main/default/objects/public_remotecomputestep__x/fields/currenttext__c.field-meta.xml
<CustomField>
    <fullName>currenttext__c</fullName>
    <description>currenttext</description>
    <externalDeveloperName>currenttext</externalDeveloperName>
    <label>currenttext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>