force-app/main/default/objects/public_remotecomputestep__x/fields/rawdata__c.field-meta.xml
<CustomField>
    <fullName>rawdata__c</fullName>
    <description>rawdata</description>
    <externalDeveloperName>rawdata</externalDeveloperName>
    <label>rawdata</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>