force-app/main/default/objects/public_remotecomputestep__x/fields/refjobid__c.field-meta.xml
<CustomField>
    <fullName>refjobid__c</fullName>
    <description>refjobid</description>
    <externalDeveloperName>refjobid</externalDeveloperName>
    <label>refjobid</label>
    <length>255</length>
    <referenceTo>public_remotecompute__x</referenceTo>
    <relationshipLabel>public$remotecomputestep</relationshipLabel>
    <relationshipName>public_remotecomputestep</relationshipName>
    <type>ExternalLookup</type>
</CustomField>