force-app/main/default/objects/public_remotecomputestep__x/fields/servicename__c.field-meta.xml
<CustomField>
    <fullName>servicename__c</fullName>
    <description>servicename</description>
    <externalDeveloperName>servicename</externalDeveloperName>
    <label>servicename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>